<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>common-mq</artifactId>
  <dependencies>
    <dependency>
      <artifactId>common-data</artifactId>
      <groupId>com.spud.barrage</groupId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <artifactId>common-core</artifactId>
      <groupId>com.spud.barrage</groupId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <artifactId>common-cluster</artifactId>
      <groupId>com.spud.barrage</groupId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>barrage-rush-common</artifactId>
    <groupId>com.spud.barrage</groupId>
    <relativePath>../pom.xml</relativePath>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>